--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Coris Explorer | Regen Network</title>
+  <title>Coris Explorer - Cosmos</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
